--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <div class="body__container">
-      <div class="form__container container">
-        <h1 class="form__heading">To Do List App ✅</h1>
+      <div class="form__container">
+        <h1 class="form__heading">To Do List ✅</h1>
         <form class="form">
           <!-- <label for="activity">Activity</label> -->
-          <div class="question__container">
+          <div class="question__container q__task">
             <label for="activity" class="activity__label prompt__label"
               >Task:</label
             >
@@ -40,7 +40,7 @@
           <!-- <label for="time">Time</label>
             <input type="time" id="time" name="time" required /> -->
 
-          <div class="question__container">
+          <div class="question__container q__priority">
             <label for="priority" class="prompt__label">Priority:</label>
             <select
               name="priority"
@@ -57,7 +57,7 @@
         </form>
       </div>
 
-      <div class="list__container container">
+      <div class="list__container">
         <ul class="list__items">
           <!-- <li class="list__item">
             <div class="todo__info">
